# ascii-graphics

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  LICENSE  Lights.cpp  Lights.hpp  Mesh.cpp  Mesh.hpp  README.md  Screen.cpp  Screen.h  Screen.hpp  agm.cpp  agm.hpp  ascii-graphics  ascii-graphics.cpp  old.cpp
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Lights.cpp  Mesh.cpp  Mesh.hpp  Screen.cpp  agm.cpp
